Refactor file handling to unify image and video support, including storage improvements and exception handling enhancements.